// Copyright 2020 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package unifiedfleet.api.v1.models;

option go_package = "infra/unifiedfleet/api/v1/models;ufspb";

import "google/protobuf/timestamp.proto";
import "google/api/resource.proto";
import "google/api/field_behavior.proto";

// ChromePlatform refers to static configs defined by Chrome Browser lab
// for their machines
message ChromePlatform {
    option (google.api.resource) = {
        type: "unified-fleet-system.appspot.com/ChromePlatform"
        pattern: "chromePlatforms/{chromePlatform}"
    };
    // The format will be chromePlatforms/XXX
    string name = 1;
    string manufacturer = 2;
    string description = 3;
    // Record the last update timestamp of this ChromePlatform (In UTC timezone)
    google.protobuf.Timestamp update_time = 4 [
        (google.api.field_behavior) = OUTPUT_ONLY];

    reserved 5;
    reserved "vm_capacity";

    // tags user can attach for easy querying/search
    repeated string tags = 6;
}